feat: enhance security with improved input sanitization, JPQL injection prevention, and refactored progressive login rate limiting.