@@ -1,8 +1,11 @@
 package com.gestao.lafemme.api.dev;
+
 import java.math.BigDecimal;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Set;
+import java.util.regex.Pattern;
 
 import com.gestao.lafemme.api.db.Condicao;
 import com.gestao.lafemme.api.db.WhereDB;
@@ -10,14 +13,14 @@ import com.gestao.lafemme.api.utils.SecuritySanitizer;
 
 public class FilterQuery {
 
-    // Spring vai bindar ?f=...&f=... aqui automaticamente
+    private static final Pattern INT_PATTERN = Pattern.compile("^-?\\d{1,18}$"); 
+    private static final Pattern DEC_PATTERN = Pattern.compile("^-?\\d+\\.\\d+$");
+
     private List<String> f = new ArrayList<>();
-
-    // itens parseados e sanitizados
-    private final List<FilterItem> filters = new ArrayList<>();
-
-    // opcional: whitelist (se você setar, ele valida também)
+    
+    private List<FilterItem> cachedFilters;
     private Set<String> allowedFields;
+    private boolean dirty = true;
 
     public static class FilterItem {
         private final String field;
@@ -35,46 +38,46 @@ public class FilterQuery {
         public Object getValue() { return value; }
     }
 
+    public void setF(List<String> f) {
+        this.f = (f != null ? f : new ArrayList<>());
+        this.dirty = true;
+    }
+
     public List<String> getF() {
         return f;
     }
 
-    /**
-     * IMPORTANTE:
-     * Qualquer lugar que usar FilterQuery via request -> passa aqui.
-     * Aqui a gente SEMPRE sanitiza e parseia.
-     */
-    public void setF(List<String> f) {
-        this.f = (f != null ? f : new ArrayList<>());
-        parseAndSanitize(); // <- sempre
+    public FilterQuery allowOnly(Set<String> allowedFields) {
+        this.allowedFields = allowedFields;
+        this.dirty = true; 
+        return this;
     }
 
     public List<FilterItem> getFilters() {
-        return filters;
-    }
-
-    /** Opcional, mas recomendado: restringe quais campos podem filtrar. */
-    public FilterQuery allowOnly(Set<String> allowedFields) {
-        this.allowedFields = allowedFields;
-        parseAndSanitize(); // revalida
-        return this;
+        if (dirty || cachedFilters == null) {
+            reprocess();
+        }
+        return Collections.unmodifiableList(cachedFilters);
     }
 
     public void applyTo(WhereDB where) {
         if (where == null) return;
-        for (FilterItem fi : filters) {
+        
+        List<FilterItem> items = getFilters(); 
+        for (FilterItem fi : items) {
             where.add(fi.getField(), fi.getCondition(), fi.getValue());
         }
     }
 
-    private void parseAndSanitize() {
-        filters.clear();
+    private void reprocess() {
+        cachedFilters = new ArrayList<>();
+        dirty = false;
+        
         if (this.f == null || this.f.isEmpty()) return;
 
         for (String raw : this.f) {
-            if (raw == null || raw.trim().isEmpty()) continue;
+            if (raw == null || raw.isBlank()) continue;
 
-            // formato: field|COND|value
             String[] parts = raw.split("\\|", 3);
             if (parts.length < 3) continue;
 
@@ -85,38 +88,43 @@ public class FilterQuery {
             String field = SecuritySanitizer.safeFieldOrNull(fieldRaw, allowedFields);
             if (field == null) continue;
 
-            Condicao cond;
-            try {
-                cond = Condicao.valueOf(condRaw.trim());
-            } catch (Exception e) {
-                continue;
-            }
+            Condicao cond = safeEnum(condRaw);
+            if (cond == null) continue;
 
             String safeValue = SecuritySanitizer.safeValueOrNull(valueRaw);
             if (safeValue == null) continue;
 
             Object parsed = parseValue(safeValue);
-            filters.add(new FilterItem(field, cond, parsed));
+            cachedFilters.add(new FilterItem(field, cond, parsed));
+        }
+    }
+
+    private Condicao safeEnum(String raw) {
+        if (raw == null) return null;
+        try {
+            return Condicao.valueOf(raw.trim().toUpperCase());
+        } catch (IllegalArgumentException e) {
+            return null; 
         }
     }
 
     private Object parseValue(String value) {
-        if ("true".equalsIgnoreCase(value)) return true;
-        if ("false".equalsIgnoreCase(value)) return false;
+        if ("true".equalsIgnoreCase(value)) return Boolean.TRUE;
+        if ("false".equalsIgnoreCase(value)) return Boolean.FALSE;
 
-        try {
-            if (value.matches("^-?\\d+$")) {
+        if (INT_PATTERN.matcher(value).matches()) {
+            try {
                 long l = Long.parseLong(value);
                 if (l >= Integer.MIN_VALUE && l <= Integer.MAX_VALUE) return (int) l;
                 return l;
+            } catch (NumberFormatException ignored) {
+                return value;
             }
-        } catch (Exception ignored) {}
+        }
 
-        try {
-            if (value.matches("^-?\\d+\\.\\d+$")) {
-                return new BigDecimal(value);
-            }
-        } catch (Exception ignored) {}
+        if (DEC_PATTERN.matcher(value).matches()) {
+            return new BigDecimal(value);
+        }
 
         return value;
     }
